# murali-examples

./: .gitignore  README.md
ai_and_storytelling/agentic_flow_chart/: Cargo.toml  README.md
ai_and_storytelling/agentic_flow_with_neural_node/: Cargo.toml  README.md
ai_and_storytelling/agentic_flow_write_animation/: Cargo.toml
ai_and_storytelling/agentic_flow_write_animation/src/: main.rs
ai_and_storytelling/agentic_reveal_showcase/: Cargo.toml  README.md
ai_and_storytelling/ai_teaching_showcase/: Cargo.toml  README.md
ai_and_storytelling/neural_network_v2/: Cargo.toml  (+1 more)
ai_and_storytelling2/: agentic_flow_with_neural_node.rs  agentic_flow_write_animation.rs  agentic_reveal_showcase.rs  ai_teaching_showcase.rs  neural_network_v2.rs  neural_signal_flow.rs  stepwise.rs  stepwise_backpath.rs  stepwise_neural_node.rs  stepwise_script_api.rs
animation/: animation_parity.rs  semantic_animation_showcase.rs  text_indicate_showcase.rs  text_reveal_effects_showcase.rs
basics/: animated_motion.rs  bezier_showcase.rs
branding_and_export/: blog_showcase.rs  murali_flute_feather_logo.rs  murali_logo.rs
dynamics/: projectile_with_updaters.rs  swaying_points.rs
graphs_and_fields/: noisy_circle.rs  stream_lines_showcase.rs  vector_field_showcase.rs
text_and_math/: axes_and_labels.rs  fourier_formula_trace.rs  latex_matrix_multiplication_morph.rs  latex_showcase.rs  latex_to_latex_morph.rs  matrix_showcase.rs  table_simple.rs  typst_showcase.rs
three_d/: parametric_surface_animated.rs  parametric_surface_wireframe.rs  parametric_surface_wireframe_showcase.rs
(+119 files in other folders)
