[package]
name = "agentic_flow_write_animation"
version = "0.1.0"
edition = "2024"

[dependencies]
murali = "0.1.4"
glam = { version = "0.27", features = ["bytemuck"] }
# tracing = "0.1"
anyhow = "1"
# bytemuck = "1.14"
# pollster = "0.3"
tokio = { version = "1", features = [
  "rt",
  "macros",
  "full",
] }
# parking_lot = "0.12"

